Closed Bug 90686 Opened 24 years ago Closed 24 years ago

Can't migrate profiles under OS X

Categories

(Core Graveyard :: Profile: BackEnd, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.4

People

(Reporter: ccarlen, Assigned: ccarlen)

Details

Attachments

(1 file)

When finding 4x profiles to migrate, we look in SystemFolder:Preferences: See: http://lxr.mozilla.org/mozilla/source/profile/src/nsProfile.cpp#1770. Running under OS X, that folder location is meaningless. It is possible under OS X to specify that ::FindFolder(...) should look in the Classic environment on that machine. There, we would find :Preferences: and thus 4x profiles.
I think this should be OSX+.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.0
-> 0.9.4
Target Milestone: mozilla1.0 → mozilla0.9.4
Migration works with this patch because, when asked for the Preferences folder under OS X, it will look in the Classic domain. I just added this behavior for prefs because I don't think we should do this in general.
Steve, Simon - Can you r=/sr=?
as long as we're only doing it for pref migration, r=sdagley
sr=sfraser
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
verified on build 2001081405
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: