Bug 90686 - Can't migrate profiles under MacOS X. Make Mac_PreferencesDirectory return the prefs dir of the classic environment under OS X so we can find 4.x profile info. r=sdagley/sr=sfraser.